Correct large sidebar images overflowing their container

--- a/style.css
+++ b/style.css
@@ -662,6 +662,7 @@ a:visited {
 }
 .site-header img,
 .entry-content img,
+.widget img,
 img[class*="align"],
 img[class*="wp-image-"] {
 	height: auto; /* Make sure images with WordPress-added height and width attributes are scaled correctly */
